# m4-modarith

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  build.md  inline_policy.md  modifying.md  project_structure.md
cmake/: arm-none-eabi-gcc-libopencm3.toolchain  board.cmake  build_caching.cmake  clang-libopencm3.toolchain  m4.cmake  modarith.cmake  primes.cmake
hw/: hal.c  hal.h  nucleo-l4r5zi.ld  nucleo-l4r5zi_fullram.ld  stm32f4discovery.ld  stm32f4discovery_fullram.ld  syscall_wrappers.c
include/: test_utility.h
m4-bench/: bench_C25519_mont.c  bench_C25519_pmp_asm.c  bench_C25519_pmp_asm_custom.c  bench_C41417_mont.c  bench_C41417_pmp_asm.c  bench_C448_mont.c  bench_C448_pmp_c_custom.c  bench_MFP248_mont.c  bench_MFP248_mont_custom.c  bench_MFP376_mont.c  bench_MFP47441_mont.c  bench_MFP500_mont.c  bench_NIST256_mont.c  bench_NIST521_mont.c  bench_NIST521_pmp_asm.c  bench_PM225_mont.c  bench_PM225_pmp_asm.c  bench_PM266_mont.c  bench_PM266_pmp_asm.c  bench_PM336_mont.c  bench_PM336_pmp_asm.c  bench_PM383_mont.c  bench_PM383_pmp_asm.c  bench_PM512_mont.c  bench_PM512_pmp_asm.c  bench_SECP256K1_mont.c  bench_m4.c
m4-codegen/: code_C25519_mont.c  code_C25519_pmp_asm.c  code_C41417_mont.c  code_C41417_pmp_asm.c  code_C448_mont.c  code_MFP248_mont.c  code_MFP376_mont.c  code_MFP47441_mont.c  code_MFP500_mont.c  code_NIST256_mont.c  code_NIST521_mont.c  code_NIST521_pmp_asm.c  code_PM225_mont.c  code_PM225_pmp_asm.c  code_PM266_mont.c  code_PM266_pmp_asm.c  code_PM336_mont.c  code_PM336_pmp_asm.c  code_PM383_mont.c  code_PM383_pmp_asm.c  code_PM512_mont.c  code_PM512_pmp_asm.c  code_SECP256K1_mont.c
m4-custom/: code_2611_pmp_asm.c  code_C25519_pmp_asm.c  code_C448_pmp_c.c  code_MFP248_mont.c  code_MFP4_mont.c  code_MFP7_mont.c
m4-external/: CMakeLists.txt  external-bench.c  external-test.c
m4-external/BjoernMHaase/: CMakeLists.txt  bench_c25519.c
m4-external/MSRECC/: CMakeLists.txt  bench_msrecc.c  fp.c  msr_ecclib.h  msr_ecclib_priv.h
m4-external/emil-P256-Cortex-M4/: CMakeLists.txt  LICENSE  benchmark.c  p256-cortex-m4-config.h  p256-cortex-m4.c
m4-external/emil-X25519-Cortex-M4/: CMakeLists.txt  LICENSE  benchmark.c  curve25519-m4f-ptrswap-gcc.s  test.c  x25519-cortex-m4-gcc.s  x25519-cortex-m4.h
m4-external/fiat-crypto/: CMakeLists.txt  MFP248_mont.c  MFP376_mont.c  MFP500_mont.c  NIST256_mont.c  NIST521_solinas.c  PM266_solinas.c  PM512_mont.c  PM512_solinas.c  SECP256K1_mont.c  bench_MFP248_mont.c  bench_MFP376_mont.c  bench_MFP500_mont.c  bench_NIST256_mont.c  bench_NIST521_solinas.c  bench_PM266_solinas.c  bench_PM512_mont.c  bench_PM512_solinas.c  bench_SECP256K1_mont.c  bench_c25519_solinas.c  bench_p448_mont.c  bench_p448_solinas.c  curve25519_solinas.c  p448_mont.c  p448_solinas.c
m4-external/p256-m/: CMakeLists.txt  bench-p256-m.c  p256-m-internal.h  p256-m.c
m4-tests/: test_C25519_mont.c  test_C25519_pmp_asm.c  test_C25519_pmp_asm_custom.c  test_C41417_mont.c  test_C41417_pmp_asm.c  test_C448_mont.c  test_C448_pmp_c_custom.c  test_MFP248_mont.c  test_MFP248_mont_custom.c  test_MFP376_mont.c  test_MFP47441_mont.c  test_MFP500_mont.c  test_NIST256_mont.c  test_NIST521_mont.c  test_NIST521_pmp_asm.c  test_PM225_mont.c  test_PM225_pmp_asm.c  test_PM266_mont.c  test_PM266_pmp_asm.c  test_PM336_mont.c  test_PM336_pmp_asm.c  test_PM383_mont.c  test_PM383_pmp_asm.c  test_PM512_mont.c  test_PM512_pmp_asm.c  test_SECP256K1_mont.c  test_m4.c
mini-gmp/: mini-gmp-rand.c  mini-gmp-rand.h  mini-gmp.h  xoshiro128plusplus.c  xoshiro128plusplus.h
modarith-bench/: bench_C25519_monty.c  bench_C25519_pseudo.c  bench_C41417_monty.c  bench_C41417_pseudo.c  bench_C448_monty.c  bench_MFP248_monty.c  bench_MFP376_monty.c  bench_MFP47441_monty.c  bench_MFP500_monty.c  bench_NIST256_monty.c  bench_NIST521_monty.c  bench_NIST521_pseudo.c  bench_PM225_monty.c  bench_PM225_pseudo.c  bench_PM266_monty.c  bench_PM266_pseudo.c  bench_PM336_monty.c  bench_PM336_pseudo.c  bench_PM383_monty.c  bench_PM383_pseudo.c  bench_PM512_monty.c  bench_PM512_pseudo.c  bench_SECP256K1_monty.c  bench_modarith.c
modarith-codegen/: code_C25519_monty.c  code_C25519_pseudo.c  code_C41417_monty.c  code_C41417_pseudo.c  code_C448_monty.c  code_MFP248_monty.c  code_MFP376_monty.c  code_MFP47441_monty.c  code_MFP500_monty.c  code_NIST256_monty.c  code_NIST521_monty.c  code_NIST521_pseudo.c  code_PM225_monty.c  code_PM225_pseudo.c  code_PM266_monty.c  code_PM266_pseudo.c  code_PM336_monty.c  code_PM336_pseudo.c  code_PM383_monty.c  code_PM383_pseudo.c  code_PM512_monty.c  code_PM512_pseudo.c  code_SECP256K1_monty.c
scripts/: gen-benchmarks-for-m4.py  gen-benchmarks-for-modarith.py  m4generator.py  m4prime.py  m4test.py  m4verifier.py  monitor.sh  openocd.sh  override-modarith-settings.py  select_host_board.sh  swo_parser.py  upload.sh
src/: main.c  rfc7748.c  test_bench_rfc7748.c  test_utility.c  tests_rfc7748.c
